antlr_generated/tigerParser.java
// Generated from ./tiger.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class tigerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAIN=1, ARRAY=2, BREAK=3, DO=4, IF=5, ELSE=6, FOR=7, FUNCTION=8, LET=9, 
		IN=10, OF=11, THEN=12, TO=13, VAR=14, WHILE=15, ENDIF=16, BEGIN=17, END=18, 
		ENDDO=19, RETURN=20, INT=21, FLOAT=22, ASSIGN=23, LE=24, GE=25, NE=26, 
		LT=27, GT=28, EQ=29, PLUS=30, MINUS=31, MULT=32, DIV=33, AND=34, OR=35, 
		COMMA=36, COLON=37, SEMICOLON=38, LPAREN=39, RPAREN=40, LBRACKET=41, RBRACKET=42, 
		ID=43, INTLIT=44, FLOATLIT=45, COMMENT=46, WS=47;
	public static final int
		RULE_tigerProgram = 0, RULE_declarationSegment = 1, RULE_varDeclarationList = 2, 
		RULE_varDeclaration = 3, RULE_functDeclarationList = 4, RULE_functDeclaration = 5, 
		RULE_type = 6, RULE_typeId = 7, RULE_idList = 8, RULE_optionalInit = 9, 
		RULE_paramList = 10, RULE_param = 11, RULE_retType = 12, RULE_statSeq = 13, 
		RULE_stat = 14, RULE_optPrefix = 15, RULE_expr = 16, RULE_const = 17, 
		RULE_binaryOperator = 18, RULE_exprList = 19, RULE_lvalue = 20, RULE_lvalueTail = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"tigerProgram", "declarationSegment", "varDeclarationList", "varDeclaration", 
			"functDeclarationList", "functDeclaration", "type", "typeId", "idList", 
			"optionalInit", "paramList", "param", "retType", "statSeq", "stat", "optPrefix", 
			"expr", "const", "binaryOperator", "exprList", "lvalue", "lvalueTail"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "'array'", "'break'", "'do'", "'if'", "'else'", "'for'", 
			"'function'", "'let'", "'in'", "'of'", "'then'", "'to'", "'var'", "'while'", 
			"'endif'", "'begin'", "'end'", "'enddo'", "'return'", "'int'", "'float'", 
			"':='", "'<='", "'>='", "'<>'", "'<'", "'>'", "'='", "'+'", "'-'", "'*'", 
			"'/'", "'&'", "'|'", "','", "':'", "';'", "'('", "')'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MAIN", "ARRAY", "BREAK", "DO", "IF", "ELSE", "FOR", "FUNCTION", 
			"LET", "IN", "OF", "THEN", "TO", "VAR", "WHILE", "ENDIF", "BEGIN", "END", 
			"ENDDO", "RETURN", "INT", "FLOAT", "ASSIGN", "LE", "GE", "NE", "LT", 
			"GT", "EQ", "PLUS", "MINUS", "MULT", "DIV", "AND", "OR", "COMMA", "COLON", 
			"SEMICOLON", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "ID", "INTLIT", 
			"FLOATLIT", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tiger.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tigerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TigerProgramContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(tigerParser.MAIN, 0); }
		public TerminalNode LET() { return getToken(tigerParser.LET, 0); }
		public DeclarationSegmentContext declarationSegment() {
			return getRuleContext(DeclarationSegmentContext.class,0);
		}
		public TerminalNode IN() { return getToken(tigerParser.IN, 0); }
		public TerminalNode BEGIN() { return getToken(tigerParser.BEGIN, 0); }
		public StatSeqContext statSeq() {
			return getRuleContext(StatSeqContext.class,0);
		}
		public TerminalNode END() { return getToken(tigerParser.END, 0); }
		public TigerProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tigerProgram; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterTigerProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitTigerProgram(this);
		}
	}

	public final TigerProgramContext tigerProgram() throws RecognitionException {
		TigerProgramContext _localctx = new TigerProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_tigerProgram);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(MAIN);
			setState(45);
			match(LET);
			setState(46);
			declarationSegment();
			setState(47);
			match(IN);
			setState(48);
			match(BEGIN);
			setState(49);
			statSeq();
			setState(50);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationSegmentContext extends ParserRuleContext {
		public VarDeclarationListContext varDeclarationList() {
			return getRuleContext(VarDeclarationListContext.class,0);
		}
		public FunctDeclarationListContext functDeclarationList() {
			return getRuleContext(FunctDeclarationListContext.class,0);
		}
		public DeclarationSegmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationSegment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterDeclarationSegment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitDeclarationSegment(this);
		}
	}

	public final DeclarationSegmentContext declarationSegment() throws RecognitionException {
		DeclarationSegmentContext _localctx = new DeclarationSegmentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarationSegment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			varDeclarationList();
			setState(53);
			functDeclarationList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclarationListContext extends ParserRuleContext {
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public VarDeclarationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclarationList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterVarDeclarationList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitVarDeclarationList(this);
		}
	}

	public final VarDeclarationListContext varDeclarationList() throws RecognitionException {
		VarDeclarationListContext _localctx = new VarDeclarationListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDeclarationList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VAR) {
				{
				{
				setState(55);
				varDeclaration();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclarationContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(tigerParser.VAR, 0); }
		public IdListContext idList() {
			return getRuleContext(IdListContext.class,0);
		}
		public TerminalNode COLON() { return getToken(tigerParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public OptionalInitContext optionalInit() {
			return getRuleContext(OptionalInitContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(tigerParser.SEMICOLON, 0); }
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitVarDeclaration(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(VAR);
			setState(62);
			idList();
			setState(63);
			match(COLON);
			setState(64);
			type();
			setState(65);
			optionalInit();
			setState(66);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctDeclarationListContext extends ParserRuleContext {
		public List<FunctDeclarationContext> functDeclaration() {
			return getRuleContexts(FunctDeclarationContext.class);
		}
		public FunctDeclarationContext functDeclaration(int i) {
			return getRuleContext(FunctDeclarationContext.class,i);
		}
		public FunctDeclarationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functDeclarationList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterFunctDeclarationList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitFunctDeclarationList(this);
		}
	}

	public final FunctDeclarationListContext functDeclarationList() throws RecognitionException {
		FunctDeclarationListContext _localctx = new FunctDeclarationListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functDeclarationList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				{
				setState(68);
				functDeclaration();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctDeclarationContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(tigerParser.FUNCTION, 0); }
		public TerminalNode ID() { return getToken(tigerParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(tigerParser.LPAREN, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(tigerParser.RPAREN, 0); }
		public RetTypeContext retType() {
			return getRuleContext(RetTypeContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(tigerParser.BEGIN, 0); }
		public StatSeqContext statSeq() {
			return getRuleContext(StatSeqContext.class,0);
		}
		public TerminalNode END() { return getToken(tigerParser.END, 0); }
		public FunctDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterFunctDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitFunctDeclaration(this);
		}
	}

	public final FunctDeclarationContext functDeclaration() throws RecognitionException {
		FunctDeclarationContext _localctx = new FunctDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(FUNCTION);
			setState(75);
			match(ID);
			setState(76);
			match(LPAREN);
			setState(77);
			paramList();
			setState(78);
			match(RPAREN);
			setState(79);
			retType();
			setState(80);
			match(BEGIN);
			setState(81);
			statSeq();
			setState(82);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TypeIdContext typeId() {
			return getRuleContext(TypeIdContext.class,0);
		}
		public TerminalNode ARRAY() { return getToken(tigerParser.ARRAY, 0); }
		public TerminalNode LBRACKET() { return getToken(tigerParser.LBRACKET, 0); }
		public TerminalNode INTLIT() { return getToken(tigerParser.INTLIT, 0); }
		public TerminalNode RBRACKET() { return getToken(tigerParser.RBRACKET, 0); }
		public TerminalNode OF() { return getToken(tigerParser.OF, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type);
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				typeId();
				}
				break;
			case ARRAY:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				match(ARRAY);
				setState(86);
				match(LBRACKET);
				setState(87);
				match(INTLIT);
				setState(88);
				match(RBRACKET);
				setState(89);
				match(OF);
				setState(90);
				typeId();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeIdContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(tigerParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(tigerParser.FLOAT, 0); }
		public TypeIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterTypeId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitTypeId(this);
		}
	}

	public final TypeIdContext typeId() throws RecognitionException {
		TypeIdContext _localctx = new TypeIdContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_typeId);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==FLOAT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdListContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(tigerParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(tigerParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(tigerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(tigerParser.COMMA, i);
		}
		public IdListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterIdList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitIdList(this);
		}
	}

	public final IdListContext idList() throws RecognitionException {
		IdListContext _localctx = new IdListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_idList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(ID);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(96);
				match(COMMA);
				setState(97);
				match(ID);
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OptionalInitContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(tigerParser.ASSIGN, 0); }
		public ConstContext const_() {
			return getRuleContext(ConstContext.class,0);
		}
		public OptionalInitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionalInit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterOptionalInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitOptionalInit(this);
		}
	}

	public final OptionalInitContext optionalInit() throws RecognitionException {
		OptionalInitContext _localctx = new OptionalInitContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_optionalInit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(103);
				match(ASSIGN);
				setState(104);
				const_();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamListContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(tigerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(tigerParser.COMMA, i);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterParamList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitParamList(this);
		}
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_paramList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(107);
				param();
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(108);
					match(COMMA);
					setState(109);
					param();
					}
					}
					setState(114);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tigerParser.ID, 0); }
		public TerminalNode COLON() { return getToken(tigerParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitParam(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(ID);
			setState(118);
			match(COLON);
			setState(119);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RetTypeContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(tigerParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public RetTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_retType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterRetType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitRetType(this);
		}
	}

	public final RetTypeContext retType() throws RecognitionException {
		RetTypeContext _localctx = new RetTypeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_retType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(121);
				match(COLON);
				setState(122);
				type();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatSeqContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public StatSeqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statSeq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterStatSeq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitStatSeq(this);
		}
	}

	public final StatSeqContext statSeq() throws RecognitionException {
		StatSeqContext _localctx = new StatSeqContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_statSeq);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(125);
				stat();
				}
				}
				setState(128); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8796094104232L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
